[project]
name = "hello-aaingyunii_pr"
version = "0.3.1"
description = "The Python program I'm distributing f"
authors = [
    {name = "aaingyunii", email = "dlsrbs98@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]


[project.scripts]
hello-aaingyunii-pic = 'hello_aaingyunii_pr.my:pic'
hello-aaingyunii-who = 'hello_aaingyunii_pr.who:my_name'

[project.urls]
"Homepage" = "https://github.com/aaingyunii/hello-aaingyunii_pr"
"Bug Tracker" = "https://github.com/aaingyunii/hello-aaingyunii_pr/issues"

