[project]
name = "hello-aaingyunii_pr"
version = "1.1.0"
description = "The Python program I'm distributing for the first time"
authors = [
    {name = "aaingyunii", email = "dlsrbs98@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]


[project.scripts]
hello-aaingyunii-pic = 'hello_aaingyunii_pr.my:pic'
hello-aaingyunii-who = 'hello_aaingyunii_pr.who:my_name'
ha-weather = 'hello_aaingyunii_pr.weather_show:weather_show'

[project.urls]
"Homepage" = "https://github.com/aaingyunii/hello-aaingyunii_pr"
"Bug Tracker" = "https://github.com/aaingyunii/hello-aaingyunii_pr/issues"

